k8s/httdrink/ksvc.yml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: httdrink
  namespace: app
  labels:
    networking.knative.dev/visibility: cluster-local
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/minScale: "1"
        autoscaling.knative.dev/maxScale: "3"
        autoscaling.knative.dev/target: "100"
        sidecar.istio.io/inject: "true"
      labels:
        app: httdrink
    spec:
      containers:
        - image: bazhova/httdrink:0.0.0
          imagePullPolicy: Always
          ports:
          - containerPort: 80
          env:
          - name: HTTDRINK_VERSION
            value: "0.0.0"
---
