k8s/httdrink/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: httdrink
  namespace: app
spec:
  selector:
    app: httdrink
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
