k8s/httdrink/httdrink.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httdrink
  namespace: app
  labels:
    app: httdrink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httdrink
  template:
    metadata:
      labels:
        app: httdrink
    spec:
      containers:
      - name: httdrink
        image: bazhova/httdrink:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httdrink
  namespace: app
spec:
  selector:
    app: httdrink
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httdrink
  namespace: istio-system
spec:
  hosts:
  - httdrink.akg.xyz
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - route:
    - destination:
        host: httdrink.app.svc.cluster.local
        port:
          number: 80
