k8s/httdrink/vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httdrink
  namespace: istio-system
spec:
  hosts:
  - httdrink.akg.xyz
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - route:
    - destination:
        host: httdrink.app.svc.cluster.local
        port:
          number: 80
